--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,4 +10,5 @@ dependencies = [
     "google-auth>=2.48.0",
     "google-auth-oauthlib>=1.2.4",
     "google-cloud-storage>=3.9.0",
+    "uvicorn[standard]>=0.40.0",
 ]
